@@ -1,3 +1,6 @@
+2008-03-05
+ Support for Bazaar.
+
 2008-02-07
  Support for Mercurial.
 
